payment section updated

--- a/src/app/shared-module/components/header/header.component.html
+++ b/src/app/shared-module/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="showHeader">
+<div *ngIf="showHeader&&showHeaderInPayment">
   <div class="large">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
